Bug 1817945 - repair opening links from thunderbird r=stransky

Only affects OpenBSD-only codepaths.
Directly use g_app_info_launch_default_for_uri() if the scheme is http(s).
Regression from bug 1714919.

Differential Revision: https://phabricator.services.mozilla.com/D176211